<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<resources>
    <string name="app_name">SecLock</string>
    <string name="uninstall_prevention_title" translatable="false">SecLock Protection</string>
    <string name="uninstall_prevention_description" translatable="false">Allows SecLock to protect itself from being uninstalled.</string>

    <string name="seclock_description">Local private storage</string>
    <string name="seclock_info">Files stored in the SecLock storage are private and other apps can\'t access them without the user\'s consent.</string>

    <string name="password_label">SecLock password</string>

    <string name="password_hint_field">Password</string>
    <string name="password_hint_repeat">Type again to confirm</string>
    <string name="password_hint_current">Current password</string>

    <string name="password_error_length">The password should have length at least %1$d</string>
    <string name="password_error_mismatch">The passwords do not match</string>
    <string name="password_error_wrong">Wrong password</string>

    <string name="password_input_message">Type your Password to access the vault.</string>
    <string name="password_input_action">Unlock</string>
    <string name="password_input_biometric_message">Authenticate to unlock the SecLock Storage</string>
    <string name="password_input_biometric_fallback">Use password</string>

    <string name="password_set_title">Add password protection</string>
    <string name="password_set_message">Set a password to lock the access to the SecLock Storage</string>
    <string name="password_set_action">Set password</string>

    <string name="password_change_title">Change password</string>
    <string name="password_change_message">Change the password to unlock the SecLock Storage</string>
    <string name="password_change_action">Change</string>
    <string name="password_change_remove">Remove</string>

    <string name="receiver_label">Import into SecLock</string>

    <string name="receiver_importing_message">Importing the file…</string>
    <string name="receiver_importing_done_ok">Imported to SecLock</string>
    <string name="receiver_importing_done_fail">Could not import the file. Try again</string>

    <string name="receiver_default_file_name">Shared file</string>

    <string name="tile_title">SecLock storage</string>

    <string name="tile_lock">Lock SecLock</string>
    <string name="tile_unlock">Unlock SecLock</string>
    <string name="tile_status_locked">Now locked</string>
    <string name="tile_status_unlocked">Now unlocked</string>

    <string name="tile_auto_lock">SecLock storage was automatically locked</string>

    <string name="launcher_no_activity">Can\'t find system Files app</string>
    <string name="shortcut_config_long">Configuration</string>
    <string name="shortcut_config_short">Configure</string>
    <string name="shortcut_config_disabled">Configuration (disabled)</string>
    <string name="shortcut_quick_lock_long">Quick lock</string>
    <string name="shortcut_quick_lock_short">Quick lock</string>
    <string name="shortcut_settings_long" translatable="false">Settings</string>
    <string name="shortcut_settings_short" translatable="false">Settings</string>

    <string name="configuration_label">Configuration</string>
    <string name="settings_label" translatable="false">Settings</string>
    <string name="configuration_shortcut">Show shortcut in app list</string>
    <string name="configuration_protection">Protection</string>
    <string name="configuration_password_set">Set password</string>
    <string name="configuration_password_change">Change password</string>
    <string name="configuration_storage_lock">Lock storage access</string>
    <string name="configuration_storage_unlock">Unlock storage access</string>
    <string name="configuration_storage_unlock_biometric">Allow storage unlock with biometric access</string>
    <string name="configuration_storage_lock_auto">Automatically lock access</string>
    <string name="configuration_storage_lock_auto_delay">Lock delay: %d minutes</string>
    <string name="configuration_lock_immediately">Immediately</string>
    <string name="configuration_credits">Originally created by &lt;b>2bllw8&lt;/b>.<br/>Forked and Modified by &lt;b>Abdullah Bari&lt;/b>.<br/>Version %1$s</string>
    <string name="configuration_open_vault">Open vault</string>
    <string name="configuration_open_settings">Open app settings</string>
    <string name="nuclear_wipe_password_set_title">Set nuclear wipe password</string>
    <string name="nuclear_wipe_password_change_title">Change nuclear wipe password</string>
    <string name="fallback_storage_password_set_title">Set fallback storage password</string>
    <string name="fallback_storage_password_change_title">Change fallback storage password</string>
</resources>
